--- a/src/modules/Header/header.scss
+++ b/src/modules/Header/header.scss
@@ -17,8 +17,30 @@
   color: $basic-color;
   font-family: 'Roboto', 'Helvetica Neue', sans-serif;
 
+  @media screen and (max-width: 599px) {
+    height: 60px;
+  }
+
+  &__navigation {
+    display: inline-flex;
+  }
+
   &__navigation-buttons {
     display: flex;
+  }
+
+  &__navigation-title {
+    @media screen and (max-width: 599px) {
+      display: none;
+    }
+  }
+
+  &__navigation-pict {
+    display: none;
+
+    @media screen and (max-width: 599px) {
+      display: block;
+    }
   }
 
   &__btn {
@@ -36,13 +58,108 @@
     color: $basic-color;
     text-transform: uppercase;
     font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+
+    @media screen and (max-width: 599px) {
+      display: block;
+      width: 60px;
+      height: 60px;
+    }
   }
 
   &__btn:hover {
     background-color: $light-bkg;
   }
+
+  &__lang-toggler-title {
+    display: flex;
+    padding: 3px;
+    align-items: center;
+    justify-content: space-around;
+    text-transform: uppercase;
+  }
+
+  &__lang-toggler-container {
+    @media screen and (max-width: 599px) {
+      position: relative;
+      height: 54px;
+      top: 6px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
 }
 
 .animated-header {
   height: 60px;
+
+  @media screen and (max-width: 599px) {
+    opacity: 0.95;
+  }
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+  
+@keyframes scaleincrease {
+  0%  {transform: scale3d(1.0, 1.0, 1.0);}
+  100% {transform: scale3d(1.05, 1.05, 1.05);}
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 48px;
+  height: 28px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+
+input:checked + .slider {
+  background-color: $light-bkg;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px  $light-bkg;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
