--- a/src/modules/PopupSpot/popupSpot.scss
+++ b/src/modules/PopupSpot/popupSpot.scss
@@ -34,6 +34,10 @@
   font-size: 24px;
   transform: scale(0.5);
   transition: 0.7s;
+
+  @media screen and (max-width: 599px) {
+    width: 270px;
+  }
 }
 
 .popup-msg.active {
