--- a/src/containers/ColumnsPage/columnsPage.scss
+++ b/src/containers/ColumnsPage/columnsPage.scss
@@ -1,27 +1,37 @@
 @import "../WelcomePage/welcomePage.scss";
 
 .columns {  
-  background-color: #f6f6f6;
+  position: relative;
+  // background-color: #f6f6f6;
+
+  &__scroll-wrapper {
+    position: relative;
+    height: calc(100vh - 100px - 100px - 56px - 62px - 17px);
+    overflow-x: auto;
+    overflow-y:hidden;
+  }
+
   &__menu {
     display: flex;
   }
 
   &__item {
-    display: block;
-    height: calc(100vh - 100px - 100px - 56px - 62px - 20px);
-    background-color: #f6f6f6;
-    // overflow-y: auto;
-    overflow-x: hidden;
+    display: flex;
+    flex: 0 0 290px;
+    height: calc(100vh - 100px - 100px - 56px - 62px - 20px - 17px);
+    // background-color: #f6f6f6;
+    // overflow-y: hidden;
+    // overflow-x: hidden;
   }
 
   &__item-content {
     // max-height: 65vh;
-    min-width: 280px;
-    margin: 0px 5px 5px 5px;
+    width: 280px;
+    margin: 0px 5px 20px 5px;
     box-sizing: border-box;
     border: 1px solid $dark-bkg;
     background-color: #f6f6f6;
-    //overflow-y: hidden;
+    overflow-y: auto;
     // overflow-x: hidden;
   }
 
@@ -29,7 +39,6 @@
     height: calc(100vh - 100px - 100px - 56px - 62px);
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: auto;
   }
 
   &__item-header {
@@ -44,12 +53,13 @@
 
   &__header,
   &__footer {
-    position: fixed;
+    // position: fixed;
+    position: absolute;
     display: block;
     width: 279px;
     margin-top: -1px;
     box-sizing: border-box;
-    z-index: 10;
+    z-index: 3;
     background-color: #f6f6f6;
     border: 1px solid #f6f6f6;
     border-right: 1px solid $dark-bkg;
@@ -60,17 +70,22 @@
   }
 
   &__footer {
-    bottom: calc(100px + 25px);
+    bottom: 22px;
     border-bottom : 1px solid $dark-bkg;
   }
 }
 
 .task-item {
-  padding: 3px;
-  margin: 5px 3px;
+  padding: 8px;
+  margin: 10px 8px;
   font-family: 'Roboto', 'Helvetica Neue', sans-serif;
   background-color: #fff;
   z-index: 0;
+
+  &__title {
+    margin-bottom: 10px;
+    font-weight: 600;
+  }
 }
 
 .task-container {
@@ -78,4 +93,9 @@
   margin-bottom: calc(55px + 25px);
   top: 55px;
   z-index: 0;
+}
+
+.fixed-header {
+  position: fixed !important;
+  top: 56px;
 }
