--- a/src/modules/Header/header.scss
+++ b/src/modules/Header/header.scss
@@ -10,9 +10,11 @@
 .header {
   position: sticky;
   top: 0px;
+  // left: 0px;
   display: flex;
   align-items: center;
   height: 100px;
+  //width: calc(100vw);
   background-color: $basic-bkg;
   color: $basic-color;
   font-family: 'Roboto', 'Helvetica Neue', sans-serif;
